# prism_finance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
examples/: 4_circular_dependency_solver.py  6_engine_performance_and_correctness.py  7_lbo_model.py  8_pure_rust_benchmark.sh  9_multi_scenario_analysis.py  basic_graph.py  circular_dependency_solver.py  lbo_model.py  simple_cash_flow_sweep.py  single_benchmark.py  tracing_demo.py  validation_demo.py
python/prism_finance/: __init__.py  graph.py
rust/: Cargo.toml  build.rs
rust/src/: graph_ffi.rs  lib.rs
rust/src/analysis/: README.md  mod.rs  telemetry.rs  topology.rs  units.rs
rust/src/bindings/: README.md  python.rs
rust/src/computation/: engine.rs  ledger.rs  mod.rs
rust/src/compute/: README.md  bytecode.rs  engine.rs  kernel.rs  ledger.rs  mod.rs
rust/src/display/: mod.rs  trace.rs
rust/src/graph/: dag.rs  edge.rs  mod.rs  node.rs  storage.rs
rust/src/solver/: ipopt_adapter.rs  ipopt_ffi.rs  mod.rs  newton.rs  optimizer.rs  problem.rs
rust/src/store/: registry.rs  types.rs
rust/src/type_system/: checker.rs  error.rs  mod.rs
rust/src/type_system/rules/: mod.rs  temporal.rs  units.rs
rust/src/validation/: error.rs  mod.rs  validator.rs
rust/src/validation/rules/: temporal.rs  units.rs
tests/python_tests/: config.py  conftest.py  test_eager_mode_ops.py  test_high_priority.py  test_low_priority.py  test_medium_priority.py  test_performance.py  test_type_system.py
