[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prism-finance"
version = "0.3.2"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "psutil>=5.0",
]

[tool.maturin]
module-name = "prism_finance._core"
manifest-path = "rust/Cargo.toml"
python-source = "python"

[tool.pytest.ini_options]
testpaths = [
    "tests/python_tests",
]
# Exclude performance tests from default runs to save CI time/resources
# unless explicitly requested.
markers = [
    "benchmark: performance tests",
]