[package]
# Rename the Rust package for clarity.
name = "prism_finance_core"
version = "0.1.0"
edition = "2021"

[lib]
# The library name must match the package name.
name = "prism_finance_core"

# "cdylib" is for the Python extension via maturin.
# "rlib" is for the native Rust toolchain, including `cargo test` and `cargo build`.
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.6.4"
pyo3 = { version = "0.27", features = ["extension-module"] } # 0.27 really is the current version
faer = "0.17"

[dev-dependencies]