[package]
name = "prism_finance_core"
version = "0.1.0"
edition = "2021"

[lib]
# The library name must match the package name.
name = "prism_finance_core"

# "cdylib" is for the Python extension via maturin.
# "rlib" is for the native Rust toolchain, including `cargo test` and `cargo build`.
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.6.4"
pyo3 = { version = "0.27", features = ["extension-module"] } # 0.27 really is the current version
thiserror = "1.0"

# Solver dependencies
argmin = "0.11.0"
nalgebra = "0.33.0"
finitediff = "0.1.3"

[dev-dependencies]
rstest = "0.21.0"